--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<html>
+<head>
+  <title>Comp20 HW1</title>
+</head>
+<body>
+  <h1>Name: </h1> 
+  Danny Atik
+  This is my webpage <br />
+  And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
+  <hr size='2' />
+  <h3>This is a smaller heading </h3>
+  <p> This is a paragraph</p>
+</body>
+</html>
 
