--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>Comp20 HW1</title>
 </head>
 <body>
-  <h1>Name: </h1> 
-  Danny Atik
+  <h3>Name: </h3>Danny Atik
+
   This is my webpage <br />
   And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
   <hr size='2' />
