--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <title>Comp20 HW1</title>
 </head>
 <body>
-  <h3>Name: </h3>Danny Atik
-
-  This is my webpage <br />
+  <h1>Danny Atik</h1>
+  <h3About Me:</h3>
+  Email: daniel.atik@tufts.edu <br />
+  Phone #: (315)-527-9996 <br />
+  Major: Computer Science & Cognitive and Brain Science <br />
+  Public IPv4 Address: 130.64.25.56 <br />
+  Private IP Address: 10.244.140.32 <br />
+  Homeland: Treasure Island, Florida <br />
+  Fun Fact: My favorite food is celery. <br />
   And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
   <hr size='2' />
   <h3>This is a smaller heading </h3>
