--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 </head>
 <body>
   <h1>Danny Atik</h1>
-  <h3About Me:</h3>
+  <h3>About Me:</h3>
   Email: daniel.atik@tufts.edu <br />
+  <br />
   Phone #: (315)-527-9996 <br />
+  <br />
   Major: Computer Science & Cognitive and Brain Science <br />
+  <br />
   Public IPv4 Address: 130.64.25.56 <br />
+  <br />
   Private IP Address: 10.244.140.32 <br />
+  <br />
   Homeland: Treasure Island, Florida <br />
+  <br />
   Fun Fact: My favorite food is celery. <br />
-  And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
-  <hr size='5' />
-  <h3>This is a smaller heading </h3>
-  <p> This is a paragraph</p>
 </body>
 </html>
 
