--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
-<html>
-<head>
-<style type="text/css">
-div.menu {float:left}
-div.menu a {display:block; width:60; visibility:hidden;}
-div.menu:hover a {display:block; width:60; visibility:visible;}
-a:link {font-family:Arial, Helvetica, sans-serif; 
- 	   font-size:14px; color:#669999; text-decoration:none}
-a:visited {font-family:Arial, Helvetica, sans-serif; 
-           font-size:14px; color:#669999; text-decoration:none}
-a:active {font-family:Arial, Helvetica, sans-serif; 
-          font-size:14px; color:#669999; text-decoration:none}
-a:hover {text-decoration:underline}
-</style>
 </head>
-
 <body>
-<div class="menu">Events
-<a href="#">Speaking Engagements</a>
-<a href="#">Appearances</a>
-</div>
-
-<div class="menu">Catalog
-<a href="#">Books</a>
-<a href="#">Other merchandise</a>
-</div>
-
-<div class="menu"> More Info
-<a href="#">Contact Information</a>
-<a href="#">Favorite Links</a>
-</div>
+  <h1>Danny Atik</h1>
+  <h3About Me:</h3>
+  <h3>About Me:</h3>
+  Email: daniel.atik@tufts.edu <br />
+  <br />
+  Phone #: (315)-527-9996 <br />
+  <br />
+  Major: Computer Science & Cognitive and Brain Science <br />
+  <br />
+  Public IPv4 Address: 130.64.25.56 <br />
+  <br />
+  Private IP Address: 10.244.140.32 <br />
+  <br />
+  Homeland: Treasure Island, Florida <br />
+  <br />
+  Fun Fact: My favorite food is celery. <br />
+  And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
+  <hr size='5' />
+  <h3>This is a smaller heading </h3>
+  <p> This is a paragraph</p>
 </body>
 </html>
-
