--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<head>
+  <title> Comp20 HW1 </title>
 </head>
 <body>
   <h1>Danny Atik</h1>
@@ -16,9 +19,5 @@
   Homeland: Treasure Island, Florida <br />
   <br />
   Fun Fact: My favorite food is celery. <br />
-  And here is &nbsp;&nbsp;&nbsp;&nbsp; another line
-  <hr size='5' />
-  <h3>This is a smaller heading </h3>
-  <p> This is a paragraph</p>
 </body>
 </html>
